# University-Security-System

./: .gitignore  AdminSistemi.java  FSHNObjectManager.java  IDSEngine.java  Pedagog.java  README.md  SecurityOfficer.java  Student.java  Sulmuesi.java  fshn_cybersecurity_project_plan.html  fshn_usecase_dashboard.html
python/: pyproject.toml  requirements.txt
python/tests/: test_models.py
python/university_security/: __init__.py  __main__.py
python/university_security/gui/: __init__.py  __main__.py  main_window.py
python/university_security/models/: __init__.py  actor.py  admin_sistemi.py  ids_engine.py  pedagog.py  security_officer.py  student.py  sulmuesi.py
