[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "university-security"
version = "2.0.0"
description = "FSHN University Security System — Python port of the Java OOP model"
readme = "../README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["university", "security", "fshn", "cybersecurity", "oop"]

authors = [
  { name = "Orgito Leka",     email = "orgito@fshn.edu.al" },
  { name = "Mateos Xhukellari" },
]

# tkinter ships with CPython — no PyPI entry needed.
# PyQt6 is optional (alternative GUI backend).
dependencies = []

[project.optional-dependencies]
gui-qt = ["PyQt6>=6.6.0"]
dev    = ["pytest>=7.4", "ruff>=0.4", "mypy>=1.8"]

[project.scripts]
university-security = "university_security.__main__:main"
university-security-gui = "university_security.gui.main_window:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
